syntax = "proto3";

package user.v1;

service UserService {
  rpc SearchUser(SearchUserRequest) returns (SearchUserResponse);
  rpc FindUser(FindUserRequest) returns (FindUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message SearchUserRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message SearchUserResponse {
  repeated User users = 1;
}

message FindUserRequest {
  int32 user_id = 1;
}

message FindUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string display_name = 1;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int32 user_id = 1;
  string display_name = 2;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message User {
  int32 id = 1;
  string display_name = 2;
  string created_at = 3;
  string updated_at = 4;
  string deleted_at = 5;
}
